--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "hono": "^4.10.4",
     "next": "15.5.2",
     "react": "19.1.0",
