--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "framer-motion": "^12.23.24",
     "hono": "^4.10.4",
     "next": "15.5.2",
