--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node .next/standalone/server.js",
+    "start:bun": "bun .next/standalone/server.js",
     "lint": "eslint"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "better-sqlite3": "^12.5.0",
+    "canvas": "^3.2.0",
+    "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.23.24",
     "hono": "^4.10.4",
     "next": "15.5.2",
@@ -18,10 +23,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/bun": "^1.3.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "postcss": "^8.5.6",
